# gym_bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-eb.yml
alembic/: README.md  env.py
alembic/.github/workflows/: deploy-eb.yml
alembic/versions/: 20260128_0403-c833063f0b93_initial_setup_with_uuid.py
docs/: ALEMBIC_QUICKSTART.md  MIGRATION_TO_UUID.md  MIGRATION_USERS_PROFILES.md
scripts/: check_daily_nutrition.py  clean_daily_nutrition_data.py  migrate.py
src/: __init__.py  config.py  main.py
src/bot/: __init__.py  bot.py  calendar_picker.py  keyboards.py
src/bot/handlers/: __init__.py  admin.py  booking.py  nutrition.py  profile.py  schedule.py  start.py  workout_program.py
src/database/: __init__.py  models.py  repository.py  session.py
src/services/: __init__.py  google_calendar.py  google_sheets.py  notifications.py
src/webapp/: server.py
src/webapp/templates/: meal_entry.html  nutrition.html  profile.html  workout.html
tests/: test_models.py  test_multiple_entries.py
